Fixes #23 Menu Overlap; Ready for WordPress.org

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -390,6 +390,7 @@ margin on the iframe, cause it breaks stuff. */
     width: 80%;
     max-width: 700px;
     margin: 0 auto;
+    padding-bottom: 1em;
 }
 
 /* Centres vertically yo. (IE8+) */
@@ -561,8 +562,7 @@ textarea {
 .main-navigation {
     clear: both;
     display: block;
-    position: absolute;
-    top: 0;
+    float: right;
     color: white;
     width: 100%;
     z-index: 2;
